--- a/frida/templates/params1.html
+++ b/frida/templates/params1.html
@@ -26,7 +26,7 @@
 							<input type="radio" name="radio3" id="radio3" value="option1" checked>
 						</div>
 						<div class="col-xs-5">
-							Filter
+							Filter Band:
 						</div>
 						<div class="col-xs-6">
 							<select class="form-control" name="band_flux" id="band_flux">
@@ -38,7 +38,6 @@
 								<option value="H">H</option>
 								<option value="K">K</option>
 							</select>
-							band
 						</div>
 					</div>
 					<div class="row">
