Dani. IFS Mode. Drawing grahps

--- a/frida/templates/params3.html
+++ b/frida/templates/params3.html
@@ -61,7 +61,7 @@
 					</div>
 					<div class="col-xs-12 col-lg-8 text-left">
 					Spectrum central wavelength:
-					<input type="text" class="form-control" id="rating_value" name="rating_value" > &#8491;
+					<input type="text" class="form-control" id="rating_value" name="grating_value" > &#8491;
 					</div>
 				</div>
 			</div>
