--- a/frida/templates/params2.html
+++ b/frida/templates/params2.html
@@ -6,12 +6,18 @@
 					<strong>Typical air mass:</strong>
 				</div>
 				<div class="panel-body text-center" >
+					<div class="form-group">
+						<label for="airmass">Airmass</label>
+						<input type="number" step="0.05" min="1.0" max="2.0" value="1.2" name="airmass" class="form-control" id="airmass">
+					</div>
+				{%comment %}
 					<select name="airmass">
 						<option value="1.0">1.0</option>
 						<option value="1.15">1.15</option>
 						<option value="1.5">1.5</option>
 						<option value="2.0">2.0</option>
 					</select>
+				{%endcomment %}
 				</div>
 			</div>
 		</div>
@@ -25,6 +31,7 @@
 						<option value="0.4">0".4</option>
 						<option value="0.6">0".6</option>
 						<option value="0.8">0".8</option>
+						<option value="0.9">0".9</option>
 						<option value="1.0">1".0</option>
 						<option value="1.2">1".2</option>
 						<option value="1.4">1".4</option>
